--- a/src/app/pages/course/course.component.html
+++ b/src/app/pages/course/course.component.html
@@ -1,6 +1,6 @@
 <mat-card class="cardWithShadow theme-card">
   <mat-card-header>
-    <mat-card-title class="m-b-0">Gestion des feuilles de course</mat-card-title>
+    <mat-card-title class="m-b-0">GESTION DES FEUILLES DE COURSE</mat-card-title>
   </mat-card-header>
   <mat-card-content class="b-t-1">
     <div class="">
@@ -34,7 +34,7 @@
               </div>
               <div style="text-align: right;" class="col-6">
                 <button (click)="dialogAdd()" mat-flat-button  color="primary">
-                  Nouvelle Course
+                  NOUVELLE COURSE
                 </button>
               </div>
           </div> 
@@ -45,16 +45,16 @@
               <!-- <th pSortableColumn="reference" pColumnFilter="reference">Reference<p-sortIcon
                   field="reference"></p-sortIcon></th> -->
 
-                  <th pSortableColumn="entryDate" pColumnFilter="entryDate">Date saisie<p-sortIcon
+                  <th pSortableColumn="entryDate" pColumnFilter="entryDate">DATE DE SAISIE<p-sortIcon
                     field="entryDate"></p-sortIcon></th>
 
 
-              <th pSortableColumn="shop" pColumnFilter="shop">Fournisseur<p-sortIcon field="shop"></p-sortIcon></th>
+              <th pSortableColumn="shop" pColumnFilter="shop">FOURNISSEUR<p-sortIcon field="shop"></p-sortIcon></th>
 
               <!-- <th pSortableColumn="datePurchase" pColumnFilter="datePurchase">Date Approvisionnement<p-sortIcon
                   field="datePurchase"></p-sortIcon></th> -->
 
-              <th pSortableColumn="montant" pColumnFilter="montant">Montant<p-sortIcon field="montant"></p-sortIcon>
+              <th pSortableColumn="montant" pColumnFilter="montant">MONTANT<p-sortIcon field="montant"></p-sortIcon>
               </th>
 
               
