--- a/src/app/pages/planification/detail-estimation/detail-estimation.component.html
+++ b/src/app/pages/planification/detail-estimation/detail-estimation.component.html
@@ -1,95 +1,111 @@
 
-<div style="text-align: center;"> <h1>Programme des plats du {{ config.data.startDate }} au {{ config.data.endDate }}</h1> </div>
+
+<!---div style="text-align: center;"> <h1>PROGRAMME DES PLATS DU {{ config.data.startDate | date:'dd/MM/yyyy'}} AU {{ config.data.endDate | date:'dd/MM/yyyy'}}</h1> </div>
 
 <div style="display: flex; justify-content: space-between; align-items: center; margin: 5px;">
     <div>
     </div>
     <div>
-        <p-button (onClick)="showDialog()" label="Générer feuille de course" icon="pi pi-eye" />
+        <p-button (onClick)="showDialog()" label="GENERER FEUILLE DE COURSE" icon="pi pi-eye" />
     </div>
-</div>
+</div--->
 <!-- Première Table : Preparation -->
- <div class="listdiv"  *ngFor="let plat of data,let k=index">
+ <!---div class="listdiv"  *ngFor="let plat of data,let k=index">
     <table>
         <thead>
             <tr>
                 <th colspan="12" style="text-align: left;"><b>{{plat.name}} : {{ getQuantite(plat.id) }} Planifié(s)</b></th>
             </tr>
+        </thead>
         <tbody>
           <tr >
+                
                 <th colspan="12" style="text-align: center;"><i>LISTE DES RECETTES</i></th>
-                <td>Qté initiale</td>
-                <td>Stock avant</td>
-                <td>Qté planifié</td>
-                <td class="highlight">Stock après</td>
-            </tr>
-            <tr *ngFor="let rec of plat.recipes ">
+                <td>QTE INITIALE</td>
+                <td>STOCK AVANT</td>
+                <td>QTE PLANIFIEE</td>
+                <td class="highlight">STOCK APRES</td>
+         </tr>
+        <tr *ngFor="let rec of plat.recipes ">
                   <th colspan="12" style="text-align: left;">{{ rec.recipe.name }}</th>
-                  <td>{{ rec.quantity/1000 }}  KG</td>
-                  <td>{{ rec.recipe.stock }} KG</td>
-                  <td>{{ rec.quantity * getQuantite(plat.id) }} KG</td>
-                  <td class="highlight">{{ rec.recipe.stock -  (rec.quantity * getQuantite(plat.id))/1000 }} KG</td>
-                  <!--<td class="highlight">{{ rec.quantity/1000 - getQuantite(plat.id) }} KG</td>-->
-              </tr>
-            
-            <tr  *ngFor="let composition of plat.compositionList" >
-                <td>{{composition?.recipe?.name}}</td>
-                <td>{{composition?.quantityKg  |  number : '.1-5'}}</td>
-                <td>{{composition?.recipe?.stock  |  number : '.1-5'}}</td>
-                <td>{{composition?.recipe?.qteEstimee  |  number : '.1-5'}}</td>
-                <td class="highlight">{{composition?.recipe?.stockApres  |  number : '.1-5'}}</td>
-            </tr>
-            
-        </tbody>
-    </table>
-    
-    <!-- Barre jaune de séparation -->
-    <div class="separator1"></div>
-    
-    <!-- Deuxième Table : Liste des Ingrédients -->
-    <table>
-        <thead>
+                  <td>{{ rec.quantity |   number : '.1-5'}}  KG</td>
+                  <td>{{ rec.recipe.stock |  number : '.1-5'}} KG</td>
+                  <td>{{ rec.quantity * getQuantite(plat.id) |  number : '.1-5'}} KG</td>
+                  <td class="highlight" [style.color]="rec.recipe.stock -  (rec.quantity * getQuantite(plat.id)) < 0 ? 'red' : 'black'">{{ rec.recipe.stock -  (rec.quantity * getQuantite(plat.id)) |  number : '.1-5'}} KG</td>
+        
+        </tr>
             <tr>
-                <th><i>DETAILS DES INGREDIENTS PAR RECETTE</i></th>
-                <th>INGREDIENT</th>
-                <th>STOCK AV KG</th>
-                <th>QTE PLANIFIEE KG</th>
-                <th>STOCK APRES KG</th>
-                <th>OBSERVATION</th>
+                 
+                <th colspan="12" style="text-align: center;"><i>DETAILS DES INGREDIENTS PAR RECETTE</i></th>
+                <td>INGREDIENT</td>
+                <td>STOCK AV KG</td>
+                <td>QTE PLANIFIEE KG</td>
+                <td>STOCK APRES KG</td>
+                <td>OBSERVATION</td>
             </tr>
-        </thead>
-        <tbody *ngFor="let composition of  data2[k]?.compositionList">
+            <div *ngFor="let plt of data,let k=index">
+                <div *ngFor="let rec of plt.recipes,let k=index">
+                <tr *ngFor="let pr of rec.detailList,let k=index">
+                    <th colspan="12" style="text-align: center;">{{pr.ingredient?.name}}</th>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+            </div>
+            </div>
+                
+        </tbody>
+        <tbody *ngFor="let composition of  data2[k]?.compositionList,let k=index">
             <tr *ngFor="let detail of composition.recipe.detailList, let j=index">
                 <td *ngIf="j==0" [rowSpan]="composition.recipe.detailList">{{composition?.recipe?.name}}</td>
                 <td>{{detail?.ingredient?.name}}</td>
                 <td></td>
-                <td></td>
-                <td></td>
-                 <td></td>
-                 <!--<td>{{detail?.ingredient?.stock?.quantity  |  number : '.1-3'}}</td>
                 <td>{{detail?.brut  |  number : '.1-3'}}</td>
                 <td>{{detail?.stockApres  |  number : '.1-3'}}</td>
-                <td [ngClass]="{'insufficient': detail.stockApres<0}" ><span *ngIf="detail.stockApres<0" >Insuffisant</span></td>-->
+                <td [ngClass]="{'insufficient': detail.stockApres<0}" ><span *ngIf="detail.stockApres<0" >Insuffisant</span></td>
             </tr>
+            
         </tbody>
-    
     </table>
-    <div class="separator"></div>
-
- </div>
-
-
-
- <!--<div class="card flex justify-content-center" >
-    <p-dialog 
-        header="Détail de la feuille de course" 
-        [modal]="true" 
-        [(visible)]="visible" 
-        [style]="{ width: '100vw', height: '100vh' }" 
-        [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }" 
-        [maximizable]="true">
-
-        <app-feuille-course [detailRecipeList]="listFeuille"></app-feuille-course>
-        
-    </p-dialog>
-</div>-->
+</div>---> 
+<!--pre>{{ data | json }}</pre--->
+<div class="listdiv">
+    <table>
+        <thead>
+            <tr>
+                <th colspan="12" style="text-align: center;"><b><i>LISTE DES PLATS</i></b></th>
+                <td><b><i>NBRE TOTAL PLANIFIE</i></b></td>
+            </tr>
+            <tr *ngFor="let plat of data,let k=index">
+                <th colspan="12" style="text-align: left;">{{plat.name}}</th>
+                <td>{{ getQuantite(plat.id) }}</td>
+            </tr>
+        </thead>
+    </table>
+</div>
+    <table>           
+            <tbody>
+                <tr >
+                      
+                      <th colspan="12" style="text-align: center;"><i>LISTE DES RECETTES</i></th>
+                      <td>QTE INITIALE</td>
+                      <td>STOCK AVANT</td>
+                      <td>QTE PLANIFIEE</td>
+                      <td class="highlight">STOCK APRES</td>
+                      
+               </tr>
+               <tr *ngFor="let rec of recipesList">
+                <th colspan="12" style="text-align: left;">{{ rec.recipe.name }}</th>
+                <td>{{ rec?.stockInitial | number:'1.0-2' }}</td>
+                <td>{{ rec?.stockAvant | number:'1.0-2' }}</td>
+                <td>{{ rec?.totalPlannedQuantity | number:'1.0-2' }}</td>
+                <td [class.negative]="rec?.stockApres < 0">
+                    {{ rec?.stockApres | number:'1.0-2' }}
+                </td>
+              </tr>
+            </tbody>
+    </table>
+    
+    
