--- a/src/app/pages/planification/detail-estimation/detail-estimation.component.scss
+++ b/src/app/pages/planification/detail-estimation/detail-estimation.component.scss
@@ -82,4 +82,9 @@ th {
         padding-right: 10px;
         font-weight: bold;
     }
+    .negative {
+        color: red;
+        font-weight: bold;
+      }
+      
 }
